security-groups.tf
resource "aws_security_group" "allow_ssh" {
  name        = "allow ssh"
  description = "Allow ssh from any IP"
  vpc_id      = module.vpc.vpc_id
  

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
